--- a/src/components/cart-dropdown/cart-dropdown.style.scss
+++ b/src/components/cart-dropdown/cart-dropdown.style.scss
@@ -4,18 +4,26 @@
   height: 340px;
   display: flex;
   flex-direction: column;
-  padding: 20px;
+  padding: 10px 10px;
   border: 1px solid black;
   background-color: white;
   top: 90px;
   right: 40px;
   z-index: 5;
 
+  ::-webkit-scrollbar{
+    width: 6px;
+    background-color: transparent;
+  }
+ 
+  ::-webkit-scrollbar-thumb{
+    background-color: rgba(0,0,0,0.7);
+    border-radius: 20px;
+  }
+
   .scroll-container {
     height: 240px;
     margin: 0px;
-    border-top: 1px solid #AAA;
-    border-bottom: 1px solid #AAA;
     overflow-y: scroll;
     position:absolute;
   }
