--- a/src/components/cart-dropdown/cart-dropdown.style.scss
+++ b/src/components/cart-dropdown/cart-dropdown.style.scss
@@ -28,6 +28,11 @@
     position:absolute;
   }
 
+  .empty-message {
+    font-size: 18px;
+    margin: 50px auto;
+  }
+  
   .cart-items {
     height: 100%;
     display: flex;
